syntax = "proto3";

package product.v1;

option go_package = "gen/product/v1;productv1";

service ProductService {
  rpc GetProductsByIds (GetProductsByIdsRequest)
      returns (GetProductsByIdsResponse);

  rpc ValidateProducts (ValidateProductsRequest)
      returns (ValidateProductsResponse);

  rpc CheckAvailability (CheckAvailabilityRequest)
    returns (CheckAvailabilityResponse);
}

message GetProductsByIdsRequest {
  repeated string product_ids = 1;
}

message GetProductsByIdsResponse {
  repeated Product products = 1;
}

message Product {
  string id = 1;
  string name = 2;
  double price = 3;
}

message ValidateProductsRequest {
  repeated string product_ids = 1;
}

message ValidateProductsResponse {
  repeated string valid_product_ids = 1;
  repeated string missing_product_ids = 2;
}

message CheckAvailabilityItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckAvailabilityRequest {
  repeated CheckAvailabilityItem items = 1;
}

message InsufficientProduct {
  string product_id = 1;
  int32 requested = 2;
  int32 available = 3;
}

message CheckAvailabilityResponse {
  bool available = 1;
  repeated InsufficientProduct insufficient = 2;
}
